--- a/src-a1/main/resources/application.properties
+++ b/src-a1/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/stackoverflow
 spring.datasource.username=root
-spring.datasource.password=Pmaaurla97
+spring.datasource.password=
 
 spring.flyway.clean-on-validation-error=true
 
